--- a/package.json
+++ b/package.json
@@ -92,7 +92,7 @@
   "dependencies": {},
   "devDependencies": {
     "@babel/cli": "^7.4.4",
-    "@babel/core": "^7.4.5",
+    "@babel/core": "7.18.6",
     "@babel/preset-env": "^7.7.4",
     "@babel/register": "^7.4.4",
     "@babel/types": "^7.4.4",
@@ -109,9 +109,9 @@
     "eslint": "^5.16.0",
     "eslint-plugin-import": "^2.25.4",
     "fast-check": "^2.12.0",
-    "handlebars": ">=4.1.2",
+    "handlebars": "4.7.7",
     "js-yaml": "^3.13.1",
-    "mocha": "^6.1.4",
+    "mocha": "10.1.0",
     "npm-run-all": "^4.1.5",
     "nyc": "^15.0.1",
     "rimraf": "^2.6.3",
