chore: update vulnerable dependencies (#3420)
* chore: update vulnerable dependencies

---------

Co-authored-by: Ridge Kimani <ridgekimani@gmail.com>

--- a/package.json
+++ b/package.json
@@ -91,37 +91,37 @@
   },
   "dependencies": {},
   "devDependencies": {
-    "@babel/cli": "^7.4.4",
-    "@babel/core": "^7.4.5",
-    "@babel/preset-env": "^7.7.4",
-    "@babel/register": "^7.4.4",
-    "@babel/types": "^7.4.4",
-    "@rollup/plugin-babel": "^5.0.4",
+    "@babel/cli": "^7.23.0",
+    "@babel/core": "^7.23.2",
+    "@babel/preset-env": "^7.23.2",
+    "@babel/register": "^7.22.15",
+    "@babel/types": "^7.23.0",
+    "@rollup/plugin-babel": "^6.0.4",
     "babel-plugin-annotate-pure-calls": "^0.4.0",
     "babel-plugin-import-export-rename": "^1.0.1",
     "babelify": "^10.0.0",
     "benchmark": "~1.0.0",
     "browserify": "https://api.github.com/repos/browserify/browserify/tarball/9ff7c55cc67a7ddbc64f8e7270bcd75fcc72ce2f",
     "cli-table": "0.3.x",
-    "cross-env": "^5.2.0",
+    "cross-env": "^7.0.3",
     "dox": "latest",
     "envvar": "^2.0.0",
-    "eslint": "^5.16.0",
-    "eslint-plugin-import": "^2.25.4",
+    "eslint": "^8.53.0",
+    "eslint-plugin-import": "^2.29.0",
     "fast-check": "^2.12.0",
-    "handlebars": ">=4.1.2",
-    "js-yaml": "^3.13.1",
-    "mocha": "^6.1.4",
+    "handlebars": "^4.7.8",
+    "js-yaml": "^4.1.0",
+    "mocha": "^10.2.0",
     "npm-run-all": "^4.1.5",
     "nyc": "^15.0.1",
-    "rimraf": "^2.6.3",
+    "rimraf": "^5.0.5",
     "rollup": "^1.32.1",
     "rollup-plugin-uglify": "^6.0.4",
-    "sanctuary": "0.7.x",
+    "sanctuary": "^0.7.x",
     "sanctuary-identity": "^2.1.0",
     "sanctuary3": "npm:sanctuary@^3.1.0",
     "sinon": "^7.3.2",
-    "testem": "^2.16.0",
-    "xyz": "^3.0.0"
+    "testem": "^3.10.1",
+    "xyz": "^4.0.0"
   }
 }
